resources/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: jellyseerr
        imagePullPolicy: IfNotPresent
        ports:
        - name: jellyseerr
          containerPort: 5055
        volumeMounts:
        - name: jellyseerr
          mountPath: /app/config
        resources:
          limits:
            memory: 4Gi
        readinessProbe:
          tcpSocket:
            port: jellyseerr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: jellyseerr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: jellyseerr
        persistentVolumeClaim:
          claimName: jellyseerr
