resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app: jellyseerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: jellyseerr
  selector:
    app: jellyseerr
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: jellyseerr
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app: postgres
