resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: jellyseerr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: trl.crt.lol
    external-dns.alpha.kubernetes.io/target: crt.lol
spec:
  ingressClassName: nginx-external
  rules:
    - host: "trl.crt.lol"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
  tls:
    - hosts:
      - trl.crt.lol
